--- a/settings.yml
+++ b/settings.yml
@@ -1,5 +1,5 @@
 Heading:
-  default: "This is a header"
+  default: "ABB"
   max: 25
   description:
     en: "Text for the heading in the footer - you can use your site name for example - Max length 25 characters"
@@ -11,13 +11,13 @@ Blurb:
 Link_sections:
   type: list
   list_type: simple
-  default: "Design, Get inspired!|Code, Learn new things!|Business, Start a new career!|Shop, Buy cool stuff!|Community, The latest news about the people you care about!|World, Check out what's happening"
+  default: "Tiles,Tiles|Tools,Tools|Support,Support|Privacy,Privacy"
   description:
     en: "Add link sections. The ideal number of sections is six. One item per line in this order:<br> Text, title<br><b>Text:</b> what appears on in the footer<br><b>Title:</b> the text that appears when the item is hovered."
 Links:
   type: list
   list_type: simple
-  default: "Design, Design process, #, blank, Learn the basics|Design, Blog design, #, blank, What makes for a great blog?|Design, Photoshop tutorials, #, blank, Photoshop for beginners|Design, Design trends, #, blank, Stay on top of the current trends!|Code, Wordpress, #, blank, Wordpress code examples|Code, Tools, #, blank, Tools that will make your life easier!|Code, Tutorials, #, blank, Just starting out? We'll guide you through the basics|Business, Blogging, #, blank, Why not start a blog?|Business, Social media, #, blank, Learn how to leverage Social media and make it work for your business|Business, Make money, #, blank, Everyone likes to be paid!|Business, Marketing, #, blank, No business will survive without customers...Here's how to get'em!|Shop, Vectors, #, blank, buy vectors|Shop, Textures, #, blank, buy textures|Shop, UI kits, #, blank, buy UI kits|Shop, PSDs, #, blank, Ready-made PSD's|Community, Your corner, #, blank, Tell us how you feel!|Community, Questions, #, blank, Feel like answering some questions?|Community, Members, #, blank, Say hi to new members|Community, trending, #, blank, Catch up with the latest trending topics!|World, Politics, #, blank, Stay up to date|World, Education, #, blank, The latest research|World, Automotive, #, blank, We cover the latest models!|World, Sports, #, The latest scores|World, Tech, #, Never miss a new gadget"
+  default: "Tiles,Discover,https://dev.partnerhub.connect.abb.com/discover,blank,Dicover|Tiles,Learning,https://dev.partnerhub.connect.abb.com/learning,blank,learning|Tools,Ekip Connect 3,https://new.abb.com/low-voltage/products/circuit-breakers/tmax-xt/software,blank,connect 3|Tools,ABB Connect,https://new.abb.com/about/our-businesses/electrification/abb-connect,blank,Abb connect|Support,Ask for support,https://new.abb.com/about/our-businesses/electrification/abb-connect,blank,Support|Support,Manage your account,#,blank,Manage your account|Support,Send Feedback,#,blank,Send Feedback|Privacy,Terms of use,#,blank,Terms of use|Privacy,Acceptable use Policy,#,blank,Acceptable use Policy|Privacy,Privacy,#,blank,Privacy|Privacy,Change cookie settings,#,blank,Change cookie settings"
   description:
     en: "Add links to link sections. One item per line in this order:<br>Parent, text, URL, target, title<br>It is a good idea to keep the number of links under each section similar<br><b>Parent:</b> the name of the parent section which this link shows under. Use the `text` value from the list above<br><b>Text:</b> the text that shows for this link<br><b>URL:</b> the path this item links to. You can use relative paths as well.<br><b>Target:</b> Choose whether this item will open in a new tab or in the same tab. Use blank to open the link in a new tab, or use self to open it in the same tab.<br><b>Title:</b> the text that shows when the link is hovered."
 Small_links:
